# CG-2022

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
src/App/: CMakeLists.txt  FractalWidget.cpp  FractalWidget.h  FractalWindow.cpp  FractalWindow.h  TriangleWindow.cpp  TriangleWindow.h  main.cpp  shaders.qrc
src/App/Shaders/: diffuse.fs  diffuse.vs
src/Base/: CMakeLists.txt  GLWindow.cpp  GLWindow.hpp
